Finished updating all paths. Created initial conditions for media queries.

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Noah Sylwester</title>
-    <link rel="stylesheet" href="../assets/css/style_float.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
       <header>
@@ -28,15 +28,15 @@
             <h2>Portfolio</h2><br><br>
             <hr class="line"><br>
                 <a class="portfolio_container" href="https://noahsylwester.github.io/nanoabram.github.io/">
-                  <img class="portfolio_pic" src="../assets/images/51377810_10217452544844081_3298838065069424640_n.jpg" alt="Project image">
+                  <img class="portfolio_pic" src="./assets/images/51377810_10217452544844081_3298838065069424640_n.jpg" alt="Project image">
                   <p class="banner">Personal Website</p>
                 </a>
                 <a class="portfolio_container" href="https://github.com/NoahSylwester/Basic-Portfolio">
-                  <img class="portfolio_pic" src="../assets/images/profile_pic.jpg">
+                  <img class="portfolio_pic" src="./assets/images/profile_pic.jpg">
                   <p class="banner">This Website</p>
                 </a>
                 <a class="portfolio_container" href="https://scratch.mit.edu/projects/317874867/">
-                  <img class="portfolio_pic" src="../assets/images/squirreldefense.png">
+                  <img class="portfolio_pic" src="./assets/images/squirreldefense.png">
                   <p class="banner">Squirrel Defense</p>
                 </a>
           </div>
