--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Noah Sylwester</title>
-    <link rel="stylesheet" href="../assets/css/style_float.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
       <header>
