--- a/contact.html
+++ b/contact.html
@@ -24,19 +24,17 @@
           </span>
         </div>
       </header>
-      <div class="background">
           <div class="main">
             <h2>Contact</h2><br><br>
             <hr class="line"><br>
-            <p>Name</p>
-            <input class="contact_input">
-            <p>Email</p>
-            <input class="contact_input">
-            <p>Message</p>
+            <p class="contact">Name</p>
+            <input class="contact_input" placeholder=" Name">
+            <p class="contact">Email</p>
+            <input class="contact_input" placeholder=" Email">
+            <p class="contact">Message</p>
             <input class="message_input">
             <button>Submit</button>
           </div>
           <footer><br><br>Copyright</footer>
-        </div>
   </body>
 </html>
