--- a/index.html
+++ b/index.html
@@ -31,17 +31,15 @@
       </header>
 
 <!-- beginning of main page content area -->
-      <div class="background">
         <div class="main">
           <h2>About Me</h2><br><br>
           <hr class="line"><br>
           <img class="pic" src="./assets/images/profile_pic.jpg"
             alt="Profile picture" height=170px width=169px>
           <p class="bio">&emsp;&emsp;I'm a recent graduate from the University of Oregon with a MM in oboe performance, and I also have a BS in applied physics and a BM in oboe performance from the same University. I have experience in Python and R in a data science context, and I'm currently learning more technologies as part of a full-stack program based in Portland.
-            <br><br>&emsp;&emsp;In my free time I play banjo, piano, sometimes mandolin, and enjoy reading horror. I like coffee, cats, and long walks.
+            <br>&emsp;&emsp;In my free time I play banjo, piano, sometimes mandolin, and enjoy reading horror. I like coffee, cats, and long walks.
           </p>
         </div>
         <footer><br><br>Copyright</footer>
-      </div>
   </body>
 </html>
