Fleshed out splash page.

--- a/splash.html
+++ b/splash.html
@@ -8,7 +8,13 @@
 </head>
 <body class="splash">
   <div class="splash_title">
-    Welcome!
+    <h1>
+      Noah Sylwester
+    </h1>
+    <p>Oboist // Web Developer</p><br/>
+    <a href="./about.html">
+      Check out my work!
+    </a>
   </div>
 </body>
 </html>
