--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
           </div>
         <div class="tab_holder">
           <span class="tab">
-            <a href="index.html">About</a>
+            <a href="about.html">About</a>
           </span><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
           <span class="tab">
               <a href="portfolio.html">Portfolio</a>
