--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body class="splash">
+  <div class="overlay"></div>
   <div class="splash_title">
     <h1>
       Noah Sylwester
